--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
 
@@ -18,3 +18,5 @@ build/
 #Idea files
 .idea/
 web-sign-sample.iml
+
+
